@@ -2,8 +2,8 @@
 <strings>
     <!-- All %s must remain in string but can change position -->
     <string id="30000">General</string>
-    <string id="30001">Open Thread At Oldest Post</string>
-    <string id="30002">Show Oldest Post At Top</string>
+    <string id="30001">Open Thread At Newest Post</string>
+    <string id="30002">Reverse Sort Posts</string>
     <string id="30003">Language</string>
     <string id="30004">Always Login If Possible</string>
     
